--- a/index.css
+++ b/index.css
@@ -6,36 +6,42 @@ nav > ul{
     display: flex;
     list-style-type: none;
     justify-content: space-between;
-    padding: 5px;
+    /* padding: 5px; */
 }
 
 .hr-text {
-position: relative;
-border: 0;
-opacity: .8;
-&:before {
-    content: '';
-    background: linear-gradient(to right, transparent, white, transparent);
-    position: absolute;
-    left: 0;
-    top: 50%;
-    width: 100%;
-    height: 2px;
-}
-&:after {
-    content: attr(data-content);
     position: relative;
-    padding: 0 .5em;
-    color: white;
-    background-color: black;
-    font-size: large;
+    border: 0;
+    opacity: .8;
+    &:before {
+        content: '';
+        background: linear-gradient(to right, transparent, white, transparent);
+        position: absolute;
+        left: 0;
+        top: 50%;
+        width: 100%;
+        height: 2px;
+    }
+    &:after {
+        content: attr(data-content);
+        position: relative;
+        padding: .5em;
+        background-color: black;
+        font-size: large;
+    }
 }
+.center-text{
+    text-align: center;
 }
 
-.topleft {
+.project > img {
+    min-height: 300px;
+    padding-bottom: 10%;
+}
+/* .topleft {
 position: relative;
 top: 0px;
-/* left: -30%; */
+/* left: -30%; 
 font-size: 18px;
 min-height: 5%;
 width: 20%;
@@ -44,8 +50,8 @@ border: 2px solid;
 border-radius: 30%;
 vertical-align: middle;
 text-align: center;
-}
-.container {
+} */
+/* .container {
 position: relative;
 }
 .pad-5{
@@ -67,14 +73,13 @@ margin:auto;
     border:2px solid white;
     border-radius: 10px;
 }
-.projectBackground{
-    left:13% !important;
-    right:13% !important;
+.projectBackground{    
     background-color: black;
+    margin: auto;
 }
 .project > img {
     min-height: 500px;
 }
-.margin-bottom-0{
+.margin-bottom-2{
     margin-bottom: 2px !important;
-}
+} */
